deployments/Mosquitto.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mqtt

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  namespace: mqtt

spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  strategy:
    type: Recreate      # Use Recreate for ReadWriteOnly PersistentVolumeClaims; RollingUpdate for stateless
  template:
    metadata:
      labels:
        app: mosquitto

    spec:
      ## default: apps-standard, elevated: apps-high, essential infra: infra-critical
#      priorityClassName: apps-standard

    ## GPU capabilities and node specificaiton
#      runtimeClassName: nvidia       # Required NVIDIA container runtime for GPU injection
#      nodeSelector:
#        kubernetes.io/hostname: gpu-node-01
      securityContext:
        runAsUser: 1883
        runAsGroup: 1883
        fsGroup: 1883
              
      containers:
        - name: mosquitto
          image: docker.io/eclipse-mosquitto:2.0.20
          imagePullPolicy: IfNotPresent   # default: IfNotPresent, use always to force image re-pull
          # Explicitly point Mosquitto to use the mounted ConfigMap file
          #args: ["mosquitto", "-c", "/mosquitto-config/mosquitto.conf"]

          ports:
            - containerPort: 1883 # Unsecured MQTT
            - containerPort: 8883 # Secured MQTTS
            - containerPort: 9001 # WebSockets

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
              #nvidia.com/gpu: "1"
            limits:
              cpu: "1"
              memory: "512Mi"
              #nvidia.com/gpu: "1"

          ## Health probes
#          livenessProbe:
#            httpGet:
#              path: /healthz
#              port: 80
#            initialDelaySeconds: 10
#            periodSeconds: 30
#          readinessProbe:
#            httpGet:
#              path: /ready
#              port: 80
#            initialDelaySeconds: 5
#            periodSeconds: 10

          volumeMounts:
            - name: config
              mountPath: /mosquitto/config/mosquitto.conf
              subPath: mosquitto.conf
            - name: storage
              mountPath: /mosquitto/data
              subPath: data
            - name: storage
              mountPath: /mosquitto/log
              subPath: log
            - name: certs
              mountPath: /etc/mosquitto/certs
              readOnly: true

      volumes:
        - name: config
          configMap:
            name: mosquitto-config
        - name: storage
          persistentVolumeClaim:
            claimName: mosquitto-data
        - name: certs
          secret:
            secretName: mosquitto-tls-certs
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  namespace: mqtt
spec:
  type: ClusterIP
  selector:
    app: mosquitto
  ports:
    - name: mqtt
      port: 1883
      targetPort: 1883
    - name: mqtts
      port: 8883
      targetPort: 8883
    - name: websocket
      port: 9001
      targetPort: 9001

---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mosquitto-mqtts
  namespace: mqtt
spec:
  entryPoints:
    - mqtts
  routes:
    - match: HostSNI(`mqtt.metrocloud.aiot-garage.net`)
 ## Authentik middlware: enable for services without proper SSO integration
      ## to allow only users authenticated to Authentik through
#      middlewares:
#        - name: authentik-forwardauth
#          namespace: authentik

      services:
        - name: mosquitto
          port: 8883
#tls: {}     # metrocloud-wildcard-tls: *.metrocloud.aiot-garage.net via default TLSstore

  tls:
    secretName: mosquitto-tls-certs   # *.something-else.aiot-garage.net specify a different certificate if needed
